@@ -24,6 +24,7 @@
 #include <kdebug.h>
 #include <klocale.h>
 #include <kaction.h>
+#include <kurldrag.h>
 #include <kstdaction.h>
 #include <kcolordialog.h>
 #include <kxmlguiclient.h>
@@ -33,7 +34,7 @@
 
 
 KNoteEdit::KNoteEdit( QWidget* parent, const char* name )
-    : QTextEdit( parent, name )
+    : KTextEdit( parent, name )
 {
     setAcceptDrops( true );
     setWordWrap( WidgetWidth );
@@ -143,7 +144,7 @@ void KNoteEdit::readFile( QString& filename )
     if( infile.open( IO_ReadOnly ) )
     {
         QTextStream input( &infile );
-	input.setEncoding(QTextStream::UnicodeUTF8);
+        input.setEncoding(QTextStream::UnicodeUTF8);
         setText( input.read() );
         infile.close();
     } else
@@ -168,30 +169,14 @@ void KNoteEdit::dumpToFile( QString& filename ) const
 void KNoteEdit::setTextFont( QFont& font )
 {
     if ( textFormat() == PlainText )
-    {
-        setSelectionAttributes( 1, colorGroup().background(), false );
-        setSelection( 0, 0, length(), paragraphLength( length() ), 1 );
-        setCurrentFont( font );
-        removeSelection( 1 );
-    }
+        setFont( font );
     else
-    {
-        setFamily( font.family() );
-        setPointSize( font.pointSize() );
-    }
+        setCurrentFont( font );
 }
 
 void KNoteEdit::setTextColor( QColor& color )
 {
-    if ( textFormat() == PlainText )
-    {
-        setSelectionAttributes( 1, colorGroup().background(), false );
-        setSelection( 0, 0, length(), paragraphLength( length() ), 1 );
-        setColor( color );
-        removeSelection( 1 );
-    }
-    else
-        setColor( color );
+    setColor( color );
 
     QPixmap pix( 16, 16 );
     pix.fill( color );
@@ -219,7 +204,7 @@ void KNoteEdit::setTextFormat( TextFormat f )
     else
         disableRichTextActions();
 
-    QTextEdit::setTextFormat( f );
+    KTextEdit::setTextFormat( f );
 }
 
 void KNoteEdit::textColor()
@@ -285,27 +270,37 @@ void KNoteEdit::textDecreaseIndent()
 
 /** protected methods **/
 
-void KNoteEdit::dragEnterEvent( QDragEnterEvent* event )
+void KNoteEdit::contentsDragEnterEvent( QDragEnterEvent* event )
 {
-    event->accept( QUriDrag::canDecode(event) || QTextDrag::canDecode(event) );
-}
-
-void KNoteEdit::dragMoveEvent( QDragMoveEvent* event )
-{
-    if ( QUriDrag::canDecode(event) )
+    if ( KURLDrag::canDecode( event ) )
         event->accept();
-    else if ( QTextDrag::canDecode(event) )
-        QTextEdit::dragMoveEvent(event);
+    else
+        KTextEdit::contentsDragEnterEvent( event );
 }
 
-void KNoteEdit::dropEvent( QDropEvent* event )
+void KNoteEdit::contentsDragMoveEvent( QDragMoveEvent* event )
 {
-    QStringList list;
+    if ( KURLDrag::canDecode( event ) )
+        event->accept();
+    else
+        KTextEdit::contentsDragMoveEvent( event );
+}
 
-    if ( QUriDrag::decodeToUnicodeUris( event, list ) )
-        emit gotUrlDrop( list.first() );
-    else if ( QTextDrag::canDecode( event ) )
-        QTextEdit::dropEvent( event );
+void KNoteEdit::contentsDropEvent( QDropEvent* event )
+{
+    KURL::List list;
+
+    if ( KURLDrag::decode( event, list ) )
+    {
+        QString text;
+        for ( KURL::List::Iterator it = list.begin(); it != list.end(); ++it )
+            text += (*it).prettyURL() + ", ";
+
+        text.remove( text.length() - 2, 2 );
+        insert( text );
+    }
+    else
+        KTextEdit::contentsDropEvent( event );
 }
 
 /** private slots **/
